update 0.2: - changed scrollbar to mimic the old steam UI - friends chat window is now almost 1:1 - added padding to the top of the chat window to make it easier to drag when multiple chat tabs are open - custom/new addition: Added a small faded grey line to the left of a message to help distinguish individual messages from one another - inline emoticons no longer scale improperly

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -1222,7 +1222,19 @@ display: none!important;}
 .ChatMsgSlashEmote .speaker .speakerAvatar, .speaker .speakerStatus{
 opacity: 0!important;
 width: 0.5px!important;}
+
+	/* 
+	Steam UI Revival made by Vuthakral.
 	
+	Steam UI Revival Github: https://github.com/Vuthakral/Steam_UI-Revival
+	
+	This project is derived/started from the
+	"Metro skin for new Steam chat and friends UI"
+	by RoseTheFlower on github.
+	
+	Metro UI's Github: https://github.com/RoseTheFlower/newsteamchat
+	*/
+
 .messages_SpeakerName_Online_2nKVN{
 	color: rgb(var(--online))!important;}
 .messages_SpeakerName_InGame_1vaKy {
